--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 
     </div>
-    <a href="watch.html">STOPWATCH</a>
+    <a href="watch.html">STOPWATCH</a><br>
+    <a href="site.html">Nec-Tech</a>
    </div>
     
     <script src="calc.js"></script>
