--- a/watch.html
+++ b/watch.html
@@ -58,7 +58,8 @@
 
         }
     </script><br>
-    <a href="index.html">CALCULATOR</a>
+    <a href="index.html">CALC</a>
+    <a href="site.html">APP</a>
       <!--<script src="stwctch.js"></script>-->
 </body>
 </html>
